<?xml version="1.0"?>
<package format="3">
  <name>yesense_imu</name>
  <version>0.0.2</version>
  <description>The yesense_imu package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="mail@floriansteinhardt.de">Florian Steinhardt</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be other packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>serial</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
